[package]
name = "game_server"
version = "0.1.0"
authors = ["remtori <lqvu99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    futures = "0.3.5"
    pretty_env_logger = "0.4.0"
    tokio = { version = "0.2", features = ["full"] }
    warp = "0.2"